# job-search

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: jd.txt
app/api/routes/: predictor.py
app/core/: config.py
app/utils/: cleaners.py  data_loader.py  langchain_retrievers.py  openai_parsings.py
notebooks/: 1-Data-Preparation.ipynb  Linkedin_for_me.ipynb
tests/unit/app/: test_cleaners.py  test_utils.py
