[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["YG"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
openai = "^1.8.0"
fastapi = ">=0.95,<1.0"
sqlalchemy = ">=2.0,<3.0"
alembic = ">=1.10,<2.0"
pydantic = ">=1.10,<2.0"
python-jose = ">=3.3,<4.0"
requests = ">=2.30,<3.0"
uvicorn = ">=0.22,<1.0"
pip = "^23.3.2"
install = "^1.3.5"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.1"
langchain = "^0.1.5"
docx2txt = "^0.8"
jupyter = "^1.0.0"
pypdf = "^4.0.1"
bertopic = "^0.16.0"
spacy = "^3.7.2"
rank-bm25 = "^0.2.2"
seaborn = "^0.13.2"
cohere = "^4.45"
faiss-cpu = "^1.7.4"
wordcloud = "^1.9.3"
unidecode = "^1.3.8"
loguru = "^0.7.2"
langchain-community = "^0.0.17"
streamlit = "^1.31.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
